tarpc/tests/compile_fail/tarpc_server_missing_async.stderr
error: not all trait items implemented, missing: `HelloFut`
  --> tests/compile_fail/tarpc_server_missing_async.rs:9:1
   |
9  | / impl World for HelloServer {
10 | |     fn hello(name: String) -> String {
11 | |         format!("Hello, {name}!", name)
12 | |     }
13 | | }
   | |_^

error: hint: `#[tarpc::server]` only rewrites async fns, and `fn hello` is not async
  --> tests/compile_fail/tarpc_server_missing_async.rs:10:5
   |
10 |     fn hello(name: String) -> String {
   |     ^^^^^^^^
